Library/AXL(Library)/C, C++/AXDev.h

// When using the HotSwapStart API(Function to advance HotSwap only for registered StationAddresses),
//       it stores the StationAddress in HotSwapConfig, confirms existence and deletes it.
DWORD  __stdcall AxlECatSetHotSwap(DWORD dwStationAddress);
DWORD  __stdcall AxlECatIsSetHotSwap(DWORD dwStationAddress);
DWORD  __stdcall AxlECatReSetHotSwap(DWORD dwStationAddress);
// Set EtherCat master mode (configure = 0, RumMode = 1)
DWORD  __stdcall AxlECatSetMasterMode(DWORD dwMasterMode);
// Get mode status of EtherCat master.
DWORD  __stdcall AxlECatGetMasterMode(DWORD* pdwMasterMode);
// Set MasterOperationMode of EtherCat master.
DWORD  __stdcall AxlECatSetMasterOperationMode(DWORD dwOperationMode);
// Get MasterOperationMode of EtherCat master.
DWORD  __stdcall AxlECatGetMasterOperationMode(DWORD* pdwOperationMode);
// Requesting scan command to EtherCat master, and then command to save scaned data to SHM.
DWORD  __stdcall AxlECatRequestScanData();
// Get total number of scanned slaves.
DWORD  __stdcall AxlECatGetScanSlaveCount(DWORD* pdwSlaveCount);
// Get current status information of EtherCat master.
DWORD  __stdcall AxlECatGetStatus(int* pnECMasterStatus, int* pnECSlaveStatus, int* pnECConnectedSlave, int* pnECConfiguredSlave, int* pnJobTaskCycleCnt, DWORD* pdwECMasterNotification);
// Reconnecting failed network.
DWORD  __stdcall AxlEcatReConnect();
// Get address information of slave which be set.
DWORD  __stdcall AxmECatReadAddress(long lAxisNo, DWORD* dwpStationAddress, long* lpAutoIncAddress, DWORD* dwpAliasAddress);
DWORD  __stdcall AxdECatReadAddress(long lModuleNo, DWORD* dwpStationAddress, long* lpAutoIncAddress, DWORD* dwpAliasAddress);
DWORD  __stdcall AxaECatReadAddress(long lModuleNo, DWORD* dwpStationAddress, long* lpAutoIncAddress, DWORD* dwpAliasAddress);
DWORD  __stdcall AxsECatReadAddress(long lPortNo, DWORD* dwpStationAddress, long* lpAutoIncAddress, DWORD* dwpAliasAddress);
// Monitor
// Add an item to proceed with data collection.
DWORD  __stdcall AxlMonitorSetItem(long lItemIndex, DWORD dwSignalType, long lSignalNo, long lSubSignalNo);
// Get information about items to be collected.
DWORD  __stdcall AxlMonitorGetIndexInfo(long* lpItemSize, long* lpItemIndex);
// Get detailed settings of each items for data collection progress.
DWORD  __stdcall AxlMonitorGetItemInfo(long lItemIndex, DWORD* dwpSignalType, long* lpSignalNo, long* lpSubSignalNo);
// Reset settings of all data collection items.
DWORD  __stdcall AxlMonitorResetAllItem();
// Reset settings of selected data collection items.
DWORD  __stdcall AxlMonitorResetItem(long lItemIndex);
// Set the trigger condition of data collection.
DWORD  __stdcall AxlMonitorSetTriggerOption(DWORD dwSignalType, long lSignalNo, long lSubSignalNo, DWORD dwOperatorType, double dValue1, double dValue2);
// Get the trigger condition of data collection.
//DWORD  __stdcall AxlMonitorGetTriggerOption(DWORD* dwpSignalType, long* lpSignalNo, long* lpSubSignalNo, DWORD* dwpOperatorType, double* dpValue1, double* dpValue2);
// Reset trigger condition of data collection.
DWORD  __stdcall AxlMonitorResetTriggerOption();
// Start collecting data.
DWORD  __stdcall AxlMonitorStart(DWORD dwStartOption, DWORD dwOverflowOption);
// Stop collecting data.
DWORD  __stdcall AxlMonitorStop();
// Read collected data.
DWORD  __stdcall AxlMonitorReadData(long* lpItemSize, long* lpDataCount, double* dpReadData);
// Read period of data collection.
DWORD  __stdcall AxlMonitorReadPeriod(DWORD* dwpPeriod);
//////////////////////////////////////////////////////////////////////////
// MonitorEx
// Add an item to proceed with data collection.
DWORD  __stdcall AxlMonitorExSetItem(long lItemIndex, DWORD dwSignalType, long lSignalNo, long lSubSignalNo);
// Gets information about the items to be collected.
DWORD  __stdcall AxlMonitorExGetIndexInfo(long* lpItemSize, long* lpItemIndex);
// Gets the detailed settings for each item to proceed with data collection.
DWORD  __stdcall AxlMonitorExGetItemInfo(long lItemIndex, DWORD* dwpSignalType, long* lpSignalNo, long* lpSubSignalNo);
// Reset the settings for all data collection items.
DWORD  __stdcall AxlMonitorExResetAllItem();
// Reset the settings of the selected data collection item.
DWORD  __stdcall AxlMonitorExResetItem(long lItemIndex);
// Sets the trigger condition for data collection.
DWORD  __stdcall AxlMonitorExSetTriggerOption(DWORD dwSignalType, long lSignalNo, long lSubSignalNo, DWORD dwOperatorType, double dValue1, double dValue2);
// Gets the trigger condition for data collection.
//DWORD  __stdcall AxlMonitorExGetTriggerOption(DWORD* dwpSignalType, long* lpSignalNo, long* lpSubSignalNo, DWORD* dwpOperatorType, double* dpValue1, double* dpValue2);

// Reset trigger conditions for data collection.
DWORD  __stdcall AxlMonitorExResetTriggerOption();
// Start collecting data.
DWORD  __stdcall AxlMonitorExStart(DWORD dwStartOption, DWORD dwOverflowOption);
// Stop collecting data.
DWORD  __stdcall AxlMonitorExStop();
// Gets collected data.
DWORD  __stdcall AxlMonitorExReadData(long* lpItemSize, long* lpDataCount, double* dpReadData);
// Gets the period of data collection.
DWORD  __stdcall AxlMonitorExReadPeriod(DWORD* dwpPeriod);
//////////////////////////////////////////////////////////////////////////

// Linear interpolation about 2 axis including information of offset position for X2, Y2 axis.
DWORD  __stdcall AxmLineMoveDual01(long lCoordNo, double* dpEndPosition, double dVelocity, double dAccel, double dDecel, double dOffsetLength, double dTotalLength, double* dpStartOffsetPosition, double* dpEndOffsetPosition);
// Arc interpolation about 2 axis including information of offset position for X2, Y2 axis.
DWORD  __stdcall AxmCircleCenterMoveDual01(long lCoordNo, long* lpAxes, double* dpCenterPosition, double* dpEndPosition, double dVelocity, double dAccel, double dDecel, DWORD dwCWDir, double dOffsetLength, double dTotalLength, double* dpStartOffsetPosition, double* dpEndOffsetPosition);
// About ECAT Foe
DWORD __stdcall AxdSetFirmwareUpdateInfo(long lModuleNo, DWORD dwTotalDataSize, DWORD dwTotalPacketSize);
DWORD __stdcall AxdSetFirmwareDataTrans(long lModuleNo, DWORD dwPacketIndex, DWORD* dwaPacketData);
DWORD __stdcall AxdSetFirmwareUpdate(long lModuleNo, char* szFileName, DWORD dwFileNameLen, DWORD dwPassWord);
DWORD __stdcall AxaSetFirmwareUpdateInfo(long lModuleNo, DWORD dwTotalDataSize, DWORD dwTotalPacketSize);
DWORD __stdcall AxaSetFirmwareDataTrans(long lModuleNo, DWORD dwPacketIndex, DWORD* dwaPacketData);
DWORD __stdcall AxaSetFirmwareUpdate(long lModuleNo, char* szFileName, DWORD dwFileNameLen, DWORD dwPassWord);
DWORD __stdcall AxmSetFirmwareUpdateInfo(long lAxisNo, DWORD dwTotalDataSize, DWORD dwTotalPacketSize);
DWORD __stdcall AxmSetFirmwareDataTrans(long lAxisNo, DWORD dwPacketIndex, DWORD* dwaPacketData);
DWORD __stdcall AxmSetFirmwareUpdate(long lAxisNo, char* szFileName, DWORD dwFileNameLen, DWORD dwPassWord);
DWORD __stdcall AxmSetFoeUploadInfo(long lAxisNo, DWORD dwTotalDataSize, DWORD dwTotalPacketSize);
DWORD __stdcall AxmGetFoeUploadData(long lAxisNo, DWORD dwPacketIndex, DWORD* dwaPacketData);
DWORD __stdcall AxmSetFoeUpload(long lAxisNo, char* szFileName, DWORD dwFileNameLen, DWORD dwPassWord);
//ProfilePosition Mode          = 1,
//Velocity Mode                 = 2,
//ProfileVelocity Mode          = 3,
//ProfileTorque Mode            = 4,
//Homing Mode                   = 6,
//InterpolatedPosition Mode     = 7,
//CyclicSyncPosition Mode       = 8,
//CyclicSyncVelocity Mode       = 9,
//CyclicSyncTorque Mode         = 10,
DWORD __stdcall AxmMotSetOperationMode(long lAxisNo, DWORD dwOperationMode);
DWORD __stdcall AxmMotGetOperationMode(long lAxisNo, DWORD* pdwOperationMode);
// lChannelNo : [0,1] = 0, [2,3] = 2
// nDataCnt :
//  nDataCnt > 0 : Add Data, nDataCnt <= 0 : Initialize Data
// dwOption : Reserved.
// dpPatternData : (X1, Y1)
DWORD  __stdcall AxcTriggerSetPatternData(long lChannelNo, long nDataCnt,  DWORD dwOption, double* dpPatternData);
DWORD  __stdcall AxcTriggerGetPatternData(long lChannelNo, long* npDataCnt,  DWORD* dwpOption, double* dpPatternData);
DWORD __stdcall AxmSpiralMoveEx(long lCoordNo, double dSpiralPitch, double dTurningCount, double dAngleOfPose, DWORD dwIsInnerDirection, double dVelocity, double dAcceleration, double dDeceleration);
DWORD    __stdcall AxmFilletMove(long lCoordinate, double* dPosition, double* dFirstVector, double* dSecondVector, double dMaxVelocity, double dMaxAccel, double dMaxDecel, double dRadius);
DWORD  __stdcall AxmSignalIsServoOnSingleAxis(long lAxisNo, DWORD *upOnOff);
DWORD  __stdcall AxmMotSetTorqueConnection(long lAxisNo, long lSourceAxisNo, DWORD dwEnable);
DWORD  __stdcall AxmMotGetTorqueConnection(long lAxisNo, long* plSourceAxisNo, DWORD* pdwEnable);