Library/AXL(Library)/Visual Basic(Net)/AXDev.vb


' When using the HotSwapStart API(Function to advance HotSwap only for registered StationAddresses),
'       it stores the StationAddress in HotSwapConfig, confirms existence and deletes it.
Public Declare Function AxlECatSetHotSwap Lib "AXL.dll" (ByVal dwStationAddress As Integer) As Integer
Public Declare Function AxlECatIsSetHotSwap Lib "AXL.dll" (ByVal dwStationAddress As Integer) As Integer
Public Declare Function AxlECatReSetHotSwap Lib "AXL.dll" (ByVal dwStationAddress As Integer) As Integer


' Set EtherCat master mode (configure = 0, RumMode = 1)
Public Declare Function AxlECatSetMasterMode Lib "AXL.dll" (ByVal dwMasterMode As Integer) As Integer

' Get mode status of EtherCat master.
Public Declare Function AxlECatGetMasterMode Lib "AXL.dll" (ByRef pdwMasterMode As Integer) As Integer


' Set MasterOperationMode of EtherCat master.
Public Declare Function AxlECatSetMasterOperationMode Lib "AXL.dll" (ByVal dwOperationMode As Integer) As Integer


' Get MasterOperationMode of EtherCat master.
Public Declare Function AxlECatGetMasterOperationMode Lib "AXL.dll" (ByRef pdwOperationMode As Integer) As Integer

' Requesting scan command to EtherCat master, and then command to save scaned data to SHM.
Public Declare Function AxlECatRequestScanData Lib "AXL.dll" () As Integer



' Get total number of scanned slaves.
Public Declare Function AxlECatGetScanSlaveCount Lib "AXL.dll" (ByRef pdwSlaveCount As Integer) As Integer


' Get current status information of EtherCat master.
Public Declare Function AxlECatGetStatus Lib "AXL.dll" (ByRef pnECMasterStatus As Integer, ByRef pnECSlaveStatus As Integer, ByRef pnECConnectedSlave As Integer, ByRef pnECConfiguredSlave As Integer, ByRef pnJobTaskCycleCnt As Integer, ByRef pdwECMasterNotification As Integer) As Integer


' Reconnecting failed network.
Public Declare Function AxlEcatReConnect Lib "AXL.dll" () As Integer


' Get address information of slave which be set.
Public Declare Function AxmECatReadAddress Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef dwpStationAddress As Integer, ByRef lpAutoIncAddress As Integer, ByRef dwpAliasAddress As Integer) As Integer
Public Declare Function AxdECatReadAddress Lib "AXL.dll" (ByVal lModuleNo As Integer, ByRef dwpStationAddress As Integer, ByRef lpAutoIncAddress As Integer, ByRef dwpAliasAddress As Integer) As Integer
Public Declare Function AxaECatReadAddress Lib "AXL.dll" (ByVal lModuleNo As Integer, ByRef dwpStationAddress As Integer, ByRef lpAutoIncAddress As Integer, ByRef dwpAliasAddress As Integer) As Integer
Public Declare Function AxsECatReadAddress Lib "AXL.dll" (ByVal lModuleNo As Integer, ByRef dwpStationAddress As Integer, ByRef lpAutoIncAddress As Integer, ByRef dwpAliasAddress As Integer) As Integer


' Monitor
' Add an item to proceed with data collection.
Public Declare Function AxlMonitorSetItem Lib "AXL.dll" (ByVal lItemIndex As Integer, ByVal dwSignalType As Integer, ByVal lSignalNo As Integer, ByVal lSubSignalNo As Integer) As Integer


' Get information about items to be collected.
Public Declare Function AxlMonitorGetIndexInfo Lib "AXL.dll" (ByRef lpItemSize As Integer, ByRef lpItemIndex As Integer) As Integer


' Get detailed settings of each items for data collection progress.
Public Declare Function AxlMonitorGetItemInfo Lib "AXL.dll" (ByVal lItemIndex As Integer, ByRef dwpSignalType As Integer, ByRef lSignalNo As Integer, ByRef lpSubSignalNo As Integer) As Integer


' Reset settings of all data collection items.
Public Declare Function AxlMonitorResetAllItem Lib "AXL.dll" () As Integer


' Reset settings of selected data collection items.
Public Declare Function AxlMonitorResetItem Lib "AXL.dll" (ByVal lItemIndex As Integer) As Integer


' Set the trigger condition of data collection.
Public Declare Function AxlMonitorSetTriggerOption Lib "AXL.dll" (ByVal dwSignalType As Integer, ByVal lSignalNo As Integer, ByVal lSubSignalNo As Integer, ByVal dwOperatorType As Integer, ByVal dValue1 As Double, ByVal dValue2 As Double) As Integer



' Get the trigger condition of data collection.
' DWORD  __stdcall AxlMonitorGetTriggerOption(DWORD* dwpSignalType, long* lpSignalNo, long* lpSubSignalNo, DWORD* dwpOperatorType, double* dpValue1, double* dpValue2);

' Reset trigger condition of data collection.
Public Declare Function AxlMonitorResetTriggerOption Lib "AXL.dll" () As Integer


' Start collecting data.
Public Declare Function AxlMonitorStart Lib "AXL.dll" (ByVal dwStartOption As Integer, ByVal dwOverflowOption As Integer) As Integer


' Stop collecting data.
Public Declare Function AxlMonitorStop Lib "AXL.dll" () As Integer


' Gets collected data.
Public Declare Function AxlMonitorReadData Lib "AXL.dll" (ByRef lpItemSize As Integer, ByRef lpDataCount As Integer, ByRef dpReadData As Double) As Integer


' Gets the period of data collection.
Public Declare Function AxlMonitorReadPeriod Lib "AXL.dll" (ByRef dwpPeriod As Integer) As Integer


' MonitorEX
' Add an item to proceed with data collection.
Public Declare Function AxlMonitorExSetItem Lib "AXL.dll" (ByVal lItemIndex As Integer, ByVal dwSignalType As Integer, ByVal lSignalNo As Integer, ByVal lSubSignalNo As Integer) As Integer


' Gets information about the items to be collected.
Public Declare Function AxlMonitorExGetIndexInfo Lib "AXL.dll" (ByRef lpItemSize As Integer, ByRef lpItemIndex As Integer) As Integer


' Gets the detailed settings for each item to proceed with data collection.
Public Declare Function AxlMonitorExGetItemInfo Lib "AXL.dll" (ByVal lItemIndex As Integer, ByRef dwpSignalType As Integer, ByRef lpSignalNo As Integer, ByRef lpSubSignalNo As Integer) As Integer


' Reset settings of all data collection items.
Public Declare Function AxlMonitorExResetAllItem Lib "AXL.dll" () As Integer


' Reset settings of selected data collection items.
Public Declare Function AxlMonitorExResetItem Lib "AXL.dll" (ByVal lItemIndex As Integer) As Integer


' Set the trigger condition of data collection.
Public Declare Function AxlMonitorExSetTriggerOption Lib "AXL.dll" (ByVal dwSignalType As Integer, ByVal lSignalNo As Integer, ByVal lSubSignalNo As Integer, ByVal dwOperatorType As Integer, ByVal dValue1 As Double, ByVal dValue2 As Double) As Integer



' Get the trigger condition of data collection.
' DWORD  __stdcall AxlMonitorGetTriggerOption(DWORD* dwpSignalType, long* lpSignalNo, long* lpSubSignalNo, DWORD* dwpOperatorType, double* dpValue1, double* dpValue2);

' Reset trigger condition of data collection.
Public Declare Function AxlMonitorExResetTriggerOption Lib "AXL.dll" () As Integer


' Start collecting data.
Public Declare Function AxlMonitorExStart Lib "AXL.dll" (ByVal dwStartOption As Integer, ByVal dwOverflowOption As Integer) As Integer


' Stop collecting data.
Public Declare Function AxlMonitorExStop Lib "AXL.dll" () As Integer


' Gets collected data.
Public Declare Function AxlMonitorExReadData Lib "AXL.dll" (ByRef lpItemSize As Integer, ByRef lpDataCount As Integer, ByRef dpReadData As Double) As Integer


' Gets the period of data collection.
Public Declare Function AxlMonitorExReadPeriod Lib "AXL.dll" (ByRef dwpPeriod As Integer) As Integer



' Linear interpolation about 2 axis including information of offset position for X2, Y2 axis.
Public Declare Function AxmLineMoveDual01 Lib "AXL.dll" (ByVal lCoordNo As Integer, ByRef dpEndPosition As Double, ByVal dVelocity As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal dOffsetLength As Double, ByVal dTotalLength As Double, ByRef dpStartOffsetPosition As Double, ByRef dpEndOffsetPosition As Double) As Integer
' Arc interpolation about 2 axis including information of offset position for X2, Y2 axis.
Public Declare Function AxmCircleCenterMoveDual01 Lib "AXL.dll" (ByVal lCoordNo As Integer, ByRef lpAxes As Integer, ByRef dpCenterPosition As Double, ByRef dpEndPosition As Double, ByVal dVelocity As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal dwCWDir As Integer, ByVal dOffsetLength As Double, ByVal dTotalLength As Double, ByRef dpStartOffsetPosition As Double, ByRef dpEndOffsetPosition As Double) As Integer

' About ECAT Foe
Public Declare Function AxdSetFirmwareUpdateInfo Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal dwTotalDataSize As Integer, ByVal dwTotalPacketSize As Integer) As Integer
Public Declare Function AxdSetFirmwareDataTrans Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal dwPacketIndex As Integer, ByRef dwaPacketData As Integer) As Integer
Public Declare Function AxdSetFirmwareUpdate Lib "AXL.dll" (ByVal lModuleNo As Integer, ByRef szFileName As Byte, ByVal dwFileNameLen As Integer, ByVal dwPassWord As Integer) As Integer


Public Declare Function AxaSetFirmwareUpdateInfo Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal dwTotalDataSize As Integer, ByVal dwTotalPacketSize As Integer) As Integer
Public Declare Function AxaSetFirmwareDataTrans Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal dwPacketIndex As Integer, ByRef dwaPacketData As Integer) As Integer
Public Declare Function AxaSetFirmwareUpdate Lib "AXL.dll" (ByVal lModuleNo As Integer, ByRef szFileName As Byte, ByVal dwFileNameLen As Integer, ByVal dwPassWord As Integer) As Integer


Public Declare Function AxmSetFirmwareUpdateInfo Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dwTotalDataSize As Integer, ByVal dwTotalPacketSize As Integer) As Integer
Public Declare Function AxmSetFirmwareDataTrans Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dwPacketIndex As Integer, ByRef dwaPacketData As Integer) As Integer
Public Declare Function AxmSetFirmwareUpdate Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef szFileName As Byte, ByVal dwFileNameLen As Integer, ByVal dwPassWord As Integer) As Integer
    Public Declare Function AxmSetFoeUploadInfo Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dwTotalDataSize As Integer, ByVal dwTotalPacketSize As Integer) As Integer
    Public Declare Function AxmGetFoeUploadData Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dwPacketIndex As Integer, ByRef dwaPacketData As Integer) As Integer
    Public Declare Function AxmSetFoeUpload Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef szFileName As char*, ByVal dwFileNameLen As Integer, ByVal dwPassWord As Integer) As Integer


Public Declare Function AxmMotSetOperationMode Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dwOperationMode As Integer) As Integer
Public Declare Function AxmMotGetOperationMode Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef pdwOperationMode As Integer) As Integer



    Public Declare Function AxcTriggerSetPatternData Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal nDataCnt As Integer, ByVal dwOption As Integer, ByRef dpPatternData As Double) As Integer
    Public Declare Function AxcTriggerGetPatternData Lib "AXL.dll" (ByVal lChannelNo As Integer, ByRef npDataCnt As Integer, ByRef dwpOption As Integer, ByRef dpPatternData As Double) As Integer

    Public Declare Function AxmSpiralMoveEx Lib "AXL.dll" (ByVal lCoordNo As Integer, ByVal dSpiralPitch As Double, ByVal dTurningCount As Double, ByVal dAngleOfPose As Double, ByVal dwIsInnerDirection As Integer, ByVal dVelocity As Double, ByVal dAcceleration As Double, ByVal dDeceleration As Double) As Integer
    Public Declare Function AxmFilletMove Lib "AXL.dll" (ByVal lCoordinate As Integer, ByRef dPosition As Double, ByRef dFirstVector As Double, ByRef dSecondVector As Double, ByVal dMaxVelocity As Double, ByVal dMaxAccel As Double, ByVal dMaxDecel As Double, ByVal dRadius As Double) As Integer

    Public Declare Function AxmSignalIsServoOnSingleAxis Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef upOnOff As Integer) As Integer

    Public Declare Function AxmMotSetTorqueConnection Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal lSourceAxisNo As Integer, ByVal dwEnable As Integer) As Integer
    Public Declare Function AxmMotGetTorqueConnection Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef plSourceAxisNo As Integer, ByRef pdwEnable As Integer) As Integer


End Module
